--- a/capsule/gemlog/2022-02-24_Life_After_Death_In_The_Metaverse.gmi
+++ b/capsule/gemlog/2022-02-24_Life_After_Death_In_The_Metaverse.gmi
@@ -1,3 +1,6 @@
+=> / Home
+=> /gemlog Gemlog
+
 # Life After Death In The Metaverse
 
 Originally published on Medium: 
@@ -25,8 +28,7 @@ The grander vision is that Metaverse will serve more than a communication platfo
 
 Going back to my thought of life after death, will an avatar in a perpetually existing digital universe, aka Metaverse, represent ourselves once our physical body has expired. Probably not at the moment because, for example, even though Decentraland resides permanently inside a computer network, the avatars do what a human asks them to do. There is a direct connection between an avatar and its living owner. It cannot act on its own will. However, if we keep participating in the Decentraland long enough, can our avatar learn (through AI) the way we speak, our body language, our quirks, patterns of thinking, and life's philosophies so that it can mimic us independently. Alternatively, like in the movie Chappie will it be possible to transfer our conscience to an avatar inside a virtual universe. Of course, neither of the scenarios mentioned above is possible at the moment; however, this is the direction I want to think.
 
-Transferring human conscience into a machine is probably more complex. We still do not entirely understand human conscience and the [data storage](https://www.cnsnevada.com/what-is-the-memory-capacity-of-a-human-brain/) and processing requirements if we want to put it inside a computer. However, training an avatar over decades or a lifetime seems plausible
-given the [latest advancements in AI](https://towardsdatascience.com/the-quest-for-artificial-general-intelligence-34ecf9e7e88e). I imagine if I keep participating in the Metaverse by populating it with pictures, videos, status updates, shopping preferences, reading lists, hobbies, and interests, then my avatar should look and sound and think and communicate like me. It is also interesting to think will I be comfortable during my lifetime to let my trained or in-training avatar autonomously start emulating me. However, it might be helpful as I can fine-tune the training process. As shown in movies, I do not want to think what will happen if my avatar goes rogue and takes over my earthly possessions or miss lead someone. However, it is also interesting to imagine that one of my friends liked to interact with my avatar more than myself as it sounds and behaves better than I do in real life. But that would mean the training did not go well, and the avatar is not my accurate representation. Even though it seems more plausible, training an avatar is not the same as transferring your conscience/brain into a machine because it's only an emulation of you, not yourself. Therefore, it will not fully justify life after death I postulated in the text above.
+Transferring human conscience into a machine is probably more complex. We still do not entirely understand human conscience and the [data storage](https://www.cnsnevada.com/what-is-the-memory-capacity-of-a-human-brain/) and processing requirements if we want to put it inside a computer. However, training an avatar over decades or a lifetime seems plausible given the [latest advancements in AI](https://towardsdatascience.com/the-quest-for-artificial-general-intelligence-34ecf9e7e88e). I imagine if I keep participating in the Metaverse by populating it with pictures, videos, status updates, shopping preferences, reading lists, hobbies, and interests, then my avatar should look and sound and think and communicate like me. It is also interesting to think will I be comfortable during my lifetime to let my trained or in-training avatar autonomously start emulating me. However, it might be helpful as I can fine-tune the training process. As shown in movies, I do not want to think what will happen if my avatar goes rogue and takes over my earthly possessions or miss lead someone. However, it is also interesting to imagine that one of my friends liked to interact with my avatar more than myself as it sounds and behaves better than I do in real life. But that would mean the training did not go well, and the avatar is not my accurate representation. Even though it seems more plausible, training an avatar is not the same as transferring your conscience/brain into a machine because it's only an emulation of you, not yourself. Therefore, it will not fully justify life after death I postulated in the text above.
 
 But what would the utility of a trained avatar that can mimic me? Would he be able to take my place when I am gone? Will my children and grandchildren find peace in my death, or will it prevent them from moving on? I can see one advantage in having an animated version of myself left behind. My future generation can interact as I were alive instead of looking at my non-interactive pictures and videos. For example, I never met my great-grandparents. I only heard stories about them, but what if I log into a computer network and talk with their trained avatar. Would it be able to communicate with me in their voice, facial expressions, and body language? And if I need advice from a wise old man, could I ask his avatar? Would it also be as wise as he was? That is a difficult question as wisdom is not the same as intelligence. The trained avatar may give me an answer based on the life experiences that it learned from the data submitted by my great grandfather but maybe nothing beyond that. That begs another question: would the avatar training be only limited to the data submitted by the user during his lifetime, or could it keep evolving even after death. Sure there would be non-availability of the primary user data. However, the avatar can still learn about the evolving world and its future generations from their data streams. That would mean my great grandfather's avatar would communicate his life experiences and also know that I am his great-grandson and what is happening in my ife.
 
