--- a/capsule/gemlog/2022-03-17_Types_Of_People_And_Their_Feedback_Style.gmi
+++ b/capsule/gemlog/2022-03-17_Types_Of_People_And_Their_Feedback_Style.gmi
@@ -7,59 +7,18 @@ Originally published on Medium:
 => https://medium.com/p/2a80b016efa5
 2022-03-17
 
-Giving and getting honest feedback is difficult, but finding the right
-people to ask for feedback is even more difficult. Nevertheless, I have
-asked for countless feedback on my work and personal matters throughout
-my life. I have identified four types of people you might encounter if
-you do not select reviewers specifically for the kind of work you are
-presenting.
+Giving and getting honest feedback is difficult, but finding the right people to ask for feedback is even more difficult. Nevertheless, I have asked for countless feedback on my work and personal matters throughout my life. I have identified four types of people you might encounter if you do not select reviewers specifically for the kind of work you are presenting.
 
 ## 1. People who say this is okay, but why didn't you do that?
+This bunch doesn't even try to look at what you are presenting in the first place and always talk about the things you are not. I find them worse than those who give harsh negative feedback. Because what is the point of talking about something that is not even there. The only plus point here is that you may get ideas for your future projects, but it doesn't help with the current work at hand.
 
-This bunch doesn't even try to look at what you are presenting in the
-first place and always talk about the things you are not. I find them
-worse than those who give harsh negative feedback. Because what is the
-point of talking about something that is not even there. The only plus
-point here is that you may get ideas for your future projects, but it
-doesn't help with the current work at hand.
-
-## 2. People who only point out negatives in your work.
-
-Negative feedbacks help improve your work; however, they also have a
-discouraging effect; therefore, if the person receiving it is a beginner
-and not confident in his work can get discouraged and give up. I think
-we can always find something positive to say and need not be outright
-negative. There is always a way to deliver the bad news.
+## 2. People who only point out negatives in your work.
+Negative feedbacks help improve your work; however, they also have a discouraging effect; therefore, if the person receiving it is a beginner and not confident in his work can get discouraged and give up. I think we can always find something positive to say and need not be outright negative. There is always a way to deliver the bad news.
 
 ## 3. People who only say good things about your work and never point out areas that need improvement.
+These are the nice ones. All they want is you to be happy and have them on your good side. But unfortunately, even though it's cozy and reassuring to listen to these lovely folks, they become an echo chamber where all you hear is your praise, no criticism, and no ideas on improving.
 
-These are the nice ones. All they want is you to be happy and have them
-on your good side. But unfortunately, even though it's cozy and
-reassuring to listen to these lovely folks, they become an echo chamber
-where all you hear is your praise, no criticism, and no ideas on
-improving.
+## 4. People who give honest feedback to improve the quality of work.
+These are the rare bunch but are the most helpful. They don't blindly praise your work, often not sugar coat words, but at the same time not harsh. Direct and honest in pointing out mistakes, places to improve, with words of appreciation and encouragement. Finding such a group of individuals is challenging not because they do not exist around us but we often fail to identify the right person for a particular type of work. For example, if you want comments on your writing, it would be futile to ask someone who doesn't read or write, even if they are your close family and friends. Just because they know you well doesn't mean they have the necessary skills to evaluate your work. And this is where the most frustration kicks in. We often pick our close ones as the first set of people to show our work even though they are technically incapable of doing so.
 
-## 4. People who give honest feedback to improve the quality of work.
-
-These are the rare bunch but are the most helpful. They don't blindly
-praise your work, often not sugar coat words, but at the same time not
-harsh. Direct and honest in pointing out mistakes, places to improve,
-with words of appreciation and encouragement. Finding such a group of
-individuals is challenging not because they do not exist around us but
-we often fail to identify the right person for a particular type of
-work. For example, if you want comments on your writing, it would be
-futile to ask someone who doesn't read or write, even if they are your
-close family and friends. Just because they know you well doesn't mean
-they have the necessary skills to evaluate your work. And this is where
-the most frustration kicks in. We often pick our close ones as the first
-set of people to show our work even though they are technically
-incapable of doing so.
-
-After much experience, I tend not to rely on feedback from family and
-friends. I do let them know through common channels on social media
-about my latest work, but do not expect or put the burden on them to
-comment. Instead, I have identified people (friends, acquaintances, and
-strangers) who I know have the skills and are genuinely interested in
-presenting a good piece of work in the community. Obviously, it's a
-mutually beneficial exercise; therefore, I also have to critique their
-work in return honestly.
+After much experience, I tend not to rely on feedback from family and friends. I do let them know through common channels on social media about my latest work, but do not expect or put the burden on them to comment. Instead, I have identified people (friends, acquaintances, and strangers) who I know have the skills and are genuinely interested in presenting a good piece of work in the community. Obviously, it's a mutually beneficial exercise; therefore, I also have to critique their work in return honestly.
