all converted to gmi

--- a/capsule/gemlog/2019-02-10_One_Year_of_Investing.gmi
+++ b/capsule/gemlog/2019-02-10_One_Year_of_Investing.gmi
@@ -1,82 +1,24 @@
-One Year of Investing
-=====================
+=> / Home
+=> /gemlog Gemlog
 
-Originally published on Medium: https://medium.com/p/24cc4fed7d68
+# One Year of Investing
 
+Originally published on Medium: 
+=> https://medium.com/p/24cc4fed7d68
 2019-02-10
 
-![Photo by
-[rawpixel](https://unsplash.com/@rawpixel?utm_source=medium&utm_medium=referral)
-on [Unsplash](https://unsplash.com/?utm_source=medium&utm_medium=referral)](https://cdn-images-1.medium.com/max/1024/0*jVIvMWigDVzE_qwD)
+I am a millennial and as many millennials of my age; I had no clue on how to save money let alone on how to invest. Moreover, similar to other millennials of my age our earnings are small and also not stable. We are spending more and more time in college and entering the job market at a later age than our parents. Job security is also not guaranteed even if we end up in a high paying job.
 
-I am a millennial and as many millennials of my age; I had no clue on
-how to save money let alone on how to invest. Moreover, similar to other
-millennials of my age our earnings are small and also not stable. We are
-spending more and more time in college and entering the job market at a
-later age than our parents. Job security is also not guaranteed even if
-we end up in a high paying job.
+In 2017 everything changed for me. I became the father of an adorable baby girl. I heard somewhere that a boy becomes a man when he becomes a father and that precisely what happened to me. I felt much more responsible for my life and my finances than ever before. I decided to set up organized savings and investment plans for the financial security of my family. I decided to set aside ten percent of my salary every month for investment. I read multiple articles online about how to start investing, how to minimize risk and diversify one's finances. I settled down with the following plans and followed them religiously throughout the year.
 
-In 2017 everything changed for me. I became the father of an adorable
-baby girl. I heard somewhere that a boy becomes a man when he becomes a
-father and that precisely what happened to me. I felt much more
-responsible for my life and my finances than ever before. I decided to
-set up organized savings and investment plans for the financial security
-of my family. I decided to set aside ten percent of my salary every
-month for investment. I read multiple articles online about how to start
-investing, how to minimize risk and diversify one's finances. I settled
-down with the following plans and followed them religiously throughout
-the year.
+First, I signed up for a life insurance term plan. Term plans are for risk coverage. They do not return anything at the time of maturity, but with a very low premium, they can provide high compensation in the event of the insured's death. Many term plans also come with additional riders, for example, disability, cancer, etc. The money associated with a rider can be redeemed during the lifetime of the insured for the covered reason(s).
 
-First, I signed up for a life insurance term plan. Term plans are for
-risk coverage. They do not return anything at the time of maturity, but
-with a very low premium, they can provide high compensation in the event
-of the insured's death. Many term plans also come with additional
-riders, for example, disability, cancer, etc. The money associated with
-a rider can be redeemed during the lifetime of the insured for the
-covered reason(s).
+Second, I initiated an investment plan specially designed by the government of India for a girl child. The plan is called Sukanya Smriddhi Yojana, and it can be opened in any partner bank or financial institution. The policy says that I can invest up to Rs. 150,000 a year and continue investing for 14 years. Once my daughter turns 18, I can withdraw some amount for her education, and once she turns 21, I can withdraw the entire sum. The interest rate is flat 8.1% compounded, and the sum earned at the maturity will be tax-free.
 
-Second, I initiated an investment plan specially designed by the
-government of India for a girl child. The plan is called Sukanya
-Smriddhi Yojana, and it can be opened in any partner bank or financial
-institution. The policy says that I can invest up to Rs. 150,000 a year
-and continue investing for 14 years. Once my daughter turns 18, I can
-withdraw some amount for her education, and once she turns 21, I can
-withdraw the entire sum. The interest rate is flat 8.1% compounded, and
-the sum earned at the maturity will be tax-free.
+Third, I opened a retirement plan again with the government of India. It's called the national pension system (NPS). NPS is regulated and maintained by the same organization that maintains PAN number in India. NPS can be opened by a government organization for its employees, a private company or even by an individual if their employer does not have a pension scheme for them or if it's not a good one. NPS can be opened through a participating bank or financial institutions like unit trust of India. NPS is probably the only investment scheme that officially allows investment by NRIs.
 
-Third, I opened a retirement plan again with the government of India.
-It's called the national pension system (NPS). NPS is regulated and
-maintained by the same organization that maintains PAN number in India.
-NPS can be opened by a government organization for its employees, a
-private company or even by an individual if their employer does not have
-a pension scheme for them or if it's not a good one. NPS can be opened
-through a participating bank or financial institutions like unit trust
-of India. NPS is probably the only investment scheme that officially
-allows investment by NRIs.
+Fourth, after setting aside some portion of my monthly ten percent quota on the above mentioned long term investment plans, I started investing the remaining in stocks. Right now I am in the USA, and I use the Robinhood app for buying shares. Financial gain is the main idea behind stocks, but it's also about learning how the market works. I am a technology enthusiast. Therefore, I keep myself updated with the development of tech-related companies especially the ones involved in information technology and semiconductor manufacturing like NVIDIA and AMD. At the moment my principal investment happens in this domain.
 
-Fourth, after setting aside some portion of my monthly ten percent quota
-on the above mentioned long term investment plans, I started investing
-the remaining in stocks. Right now I am in the USA, and I use the
-Robinhood app for buying shares. Financial gain is the main idea behind
-stocks, but it's also about learning how the market works. I am a
-technology enthusiast. Therefore, I keep myself updated with the
-development of tech-related companies especially the ones involved in
-information technology and semiconductor manufacturing like NVIDIA and
-AMD. At the moment my principal investment happens in this domain.
+I also managed to save cash as a contingency reserve that is almost equal to three months of my in-hand salary.
 
-I also managed to save cash as a contingency reserve that is almost
-equal to three months of my in-hand salary.
-
-In the future, I want to invest in real state and precious metals such
-as gold. I hope that keeping the habit of a minimum of ten percent
-monthly salary investment will turn into long term gains. In just one
-year of mindful investment, I can see my money grow, I am more at peace
-with my financial situation and building more and more confidence that
-the future will be better and I will be able to provide for my family. I
-am a Christian believer, and I know that my security lies in our Lords'
-hands because the Bible says in Jeremiah 29:11 that He has a plan for us
-and the plan is for us to prosper. However, I want to play my part and
-use the talents that Lord has given me.
-
-![](https://medium.com/_/stat?event=post.clientViewed&referrerSource=full_rss&postId=24cc4fed7d68){width="1"
-height="1"}
+In the future, I want to invest in real state and precious metals such as gold. I hope that keeping the habit of a minimum of ten percent monthly salary investment will turn into long term gains. In just one year of mindful investment, I can see my money grow, I am more at peace with my financial situation and building more and more confidence that the future will be better and I will be able to provide for my family. I am a Christian believer, and I know that my security lies in our Lords' hands because the Bible says in Jeremiah 29:11 that He has a plan for us and the plan is for us to prosper. However, I want to play my part and use the talents that Lord has given me.
