add connect page

--- a/capsule/gemlog/2022-05-02_My_First_Kayaking_Experience.gmi
+++ b/capsule/gemlog/2022-05-02_My_First_Kayaking_Experience.gmi
@@ -10,7 +10,7 @@ We learned to move forward, reverse, turn by both forward and reverse draws, and
 
 I enjoyed the whole time we were on the water. It was calm and close to nature. The weather turned out to be excellent - a cool breeze with warm sun. I did not feel tired during or after the class. However, once I was home, I felt exhausted due to facing the direct sun the whole day, which I am not used to. I was regularly drinking, but it seemed I was a bit dehydrated. It actually took Saturday night and Sunday for me to recover from the exhaustion. I guess I need to work on my stamina and general strength training if I want to take up outdoor activities more seriously. However, at the end of the day, it was fun, and I hope that I will get to do it more often. I am now looking for local clubs or kayak renting places that I can join. If you have any recommendations, then please send them my way. Thanks!
 
-=> https://www.amazon.com/photos/shared/bwqidGu5QEWU_3nrCmVrBw.vCelUPhRBOT7PR4O0kqvQg /Some photos from the day.
+=> https://www.amazon.com/photos/shared/bwqidGu5QEWU_3nrCmVrBw.vCelUPhRBOT7PR4O0kqvQg Some photos from the day.
 
 Day 2 of #100DaysToOffload
 
