--- a/capsule/index.gmi
+++ b/capsule/index.gmi
@@ -7,6 +7,7 @@ Welcome to my website on Gemini. I am a Computational Biologist by profession an
 => /research.gmi Research
 => /cv.gmi CV
 => /tech.gmi Technical Hobbies
+=> /connect.gmi Let's Connect
 
 ----
 Made with ✌️ ❤️ ☕.
