--- a/capsule/connect.gmi
+++ b/capsule/connect.gmi
@@ -6,9 +6,11 @@
 
 I am glad that you want to get in touch with me. The easiest way to contact me is via email at [rohitfarmer@hotmail.com](mailto:rohitfarmer@hotmail.com) (yes, Hotmail, I am that old 😁). I also have an XMPP address for instant messaging; please request. _I do not feel comfortable handing over my phone number for Whatsapp/Telegram/Signal_. Below are all the platforms where you can find me.
 
+=> https://ko-fi.com/rohitfarmer For any reason you want to buy me a coffee!
+
 ## Decentralized / Federated / Encrypted
-*   [Mastodon](https://fosstodon.org/@swatantra) ~ decentralized and federated Twitter alternative.
-*   [Pixelfed.social/@swatantra](https://pixelfed.social/@swatantra) ~ decentralized and federated Instagram alternative (contains my amateur photography work).
+=> https://fosstodon.org/@swatantra Mastodon ~ a decentralized and federated Twitter alternative.
+=> https://pixelfed.social/@swatantra PixelFed ~ decentralized and federated Instagram alternative (contains my amateur photography work).
 *   XMPP/Jabber (instant messaging) ~ ask for the ID.
 *   IRC Libera.Chat (often online) ~ nick: `swatantra`
 *   Briar (peer-to-peer encrypted messaging) ~ ask for the ID.
@@ -16,19 +18,19 @@ I am glad that you want to get in touch with me. The easiest way to contact me i
 *   EchoLink (KC3SNU) ~ for fellow Hams.
 
 ## Technical
-*   [GitHub](https://github.com/rohitfarmer)
-*   [LinkedIn](https://www.linkedin.com/in/rohitfarmer)
-*   [Twitter](https://twitter.com/rohitfarmer)
-*   [YouTube Channel](https://www.youtube.com/channel/UCr_PZHmp5gMCukRqKhdGIrQ) for tutorial videos.
-*   [Dev.to](https://dev.to/rohitfarmer) for technical writings.
-*   [Research Gate](https://www.researchgate.net/profile/Rohit-Farmer)
-*   [Slide Share](https://www.slideshare.net/rohitfarmer)
+=> https://github.com/rohitfarmer GitHub 
+=> https://www.linkedin.com/in/rohitfarmer LinkedIn
+=> https://twitter.com/rohitfarmer Twitter
+=> https://www.youtube.com/channel/UCr_PZHmp5gMCukRqKhdGIrQ YouTube channel for tutorial videos.
+=> https://dev.to/rohitfarmer Dev.to for technical writings.
+=> https://www.researchgate.net/profile/Rohit-Farmer Research Gate
+=> https://www.slideshare.net/rohitfarmer Slide Share
 
 ## Non-technical
-*   [Unsplash](https://unsplash.com/@rohitfarmer) for my freely distributed photos.
-*   [Instagram](https://www.instagram.com/rohit.farmer.photography/) account for my amateur photography work.
-*   [Facebook Page](https://www.facebook.com/rohitfarmerphotography) for my amateur photography work.
-*   [Medium](https://rohitfarmer.medium.com/) for non-technical writings.
-*   [Good Reads](https://www.goodreads.com/user/show/82085648-rohit-farmer)
-*   [Libib](https://www.libib.com/u/rohitfarmer) for my physical books home library.
-*   [Discogs](https://www.discogs.com/user/rohitfarmer) for my physical medium music library.
+=> https://unsplash.com/@rohitfarmer Unsplash for my freely distributed photos.
+=> https://www.instagram.com/rohit.farmer.photography/ Instagram account for my amateur photography work.
+=> https://www.facebook.com/rohitfarmerphotography Facebook page for my amateur photography work.
+=> https://rohitfarmer.medium.com/ Medium for non-technical writings.
+=> https://www.goodreads.com/user/show/82085648-rohit-farmer Good Reads
+=> https://www.libib.com/u/rohitfarmer Libib for my physical books home library.
+=> https://www.discogs.com/user/rohitfarmer Discogs for my physical medium music library.
