--- a/capsule/connect.gmi
+++ b/capsule/connect.gmi
@@ -6,7 +6,7 @@
 
 I am glad that you want to get in touch with me. The easiest way to contact me is via email at [rohitfarmer@hotmail.com](mailto:rohitfarmer@hotmail.com) (yes, Hotmail, I am that old 😁). I also have an XMPP address for instant messaging; please request. _I do not feel comfortable handing over my phone number for Whatsapp/Telegram/Signal_. Below are all the platforms where you can find me.
 
-=> https://ko-fi.com/rohitfarmer For any reason you want to buy me a coffee!
+=> https://ko-fi.com/rohitfarmer For any reason, if you want to buy me a coffee!
 
 ## Decentralized / Federated / Encrypted
 => https://fosstodon.org/@swatantra Mastodon ~ a decentralized and federated Twitter alternative.
