--- a/capsule/gemlog/2022-05-09_The_Outcome_Of_Main_Stream_Social_Media_Fast_2022.gmi
+++ b/capsule/gemlog/2022-05-09_The_Outcome_Of_Main_Stream_Social_Media_Fast_2022.gmi
@@ -1,7 +1,7 @@
 => / Home
 => /gemlog Gemlog
 
-# Outcome of Main Stream Social Media Fast 2022
+# The Outcome Of Main Stream Social Media Fast 2022
 On March 01, 2022, I wrote a post about my wife and I going on a social media fast during the Lent season in 2022. I used the word Fast because I wanted to simulate a similar experience as Fasting on food, and I imagined that anything that can affect us as starving is probably getting devoid of social media in today's world. We are so addicted to social media that perhaps, for some of us, skipping a meal would not be as devastating as missing a popular moment online. Below are the apps that we decided to uninstall from our phone and only visit via computer if necessary.
 
 1.  Facebook
