--- a/capsule/gemlog/2022-05-09_The_Outcome_Of_Main_Stream_Social_Media_Fast_2022.gmi
+++ b/capsule/gemlog/2022-05-09_The_Outcome_Of_Main_Stream_Social_Media_Fast_2022.gmi
@@ -1,7 +1,7 @@
 => / Home
 => /gemlog Gemlog
 
-# The Outcome Of Main Stream Social Media Fast 2022
+# The Outcome Of Mainstream Social Media Fast 2022
 On March 01, 2022, I wrote a post about my wife and I going on a social media fast during the Lent season in 2022. I used the word Fast because I wanted to simulate a similar experience as Fasting on food, and I imagined that anything that can affect us as starving is probably getting devoid of social media in today's world. We are so addicted to social media that perhaps, for some of us, skipping a meal would not be as devastating as missing a popular moment online. Below are the apps that we decided to uninstall from our phone and only visit via computer if necessary.
 
 1.  Facebook
@@ -12,7 +12,7 @@ On March 01, 2022, I wrote a post about my wife and I going on a social media fa
 6.  Reddit
 7.  Quora
 8.  LinkedIn
-l
+
 I do not use Tiktok and Snapchat; they seem to be the most useless of all social media. However, I did uninstall everything else. Unfortunately, my wife couldn't get rid of Facebook as she bought a new phone right before I persuaded her to join this exercise with me, and it was too hard for her not to use her new phone without Facebook.
 
 Our intention for going on this fast was to free ourselves from the pressure of always being connected and participating in everything that was going on around us. And to reclaim some of our time to spend more time in prayer and devotion, reading more physical books, talking to people on the phone, exercising, and weather permitting, being more outdoors with kids. Even though we couldn't achieve all that we wanted, it did open us to the possibility of getting rid of all our social media obligations and still being content and connected with everyone that we care about. From here on, I will only talk about my personal experience. I don't want to get into trouble by misinterpreting my wife; she is capable of writing about her experiences.
