--- a/capsule/gemlog/2022-05-10_Sometimes_Minimum_Is_Better.gmi
+++ b/capsule/gemlog/2022-05-10_Sometimes_Minimum_Is_Better.gmi
@@ -7,8 +7,9 @@ We are told to live abundantly, asked to give our maximum, and live to the fulle
 
 * It is better to spend a minimum than to get into debt.
 * It is better to pay your credit card debt's minimum balance (if not in full) than to pay outrageous penalties.
+* It is better to save/invest a little bit regularly than to wait for a bonus.
 * It is better to exercise a few mins every day than to wait for the day when you can get up at 5 AM and pump iron for an hour.
-* It is better to read/study a few mins every day than cramming in one night before a deadline.
+* It is better to read/study a few mins every day than to cram in one night before a deadline.
 * It is better to keep checking on friends' and family's mental health for a few mins regularly than to wait until someone needs an intervention.
 * It is better to keep reminding your children every day that you love them and are always there for them than to put up a great show that money can buy once in a while.
 * It is better to be grateful every day than wait for a lottery win.
