--- a/capsule/index.gmi
+++ b/capsule/index.gmi
@@ -18,5 +18,5 @@ My https website at
 
 ----
 Made with ✌️ ❤️ ☕.
-Copyright 2022 Rohit Farmer
+Copyright 2022-present Rohit Farmer
 You are on my personal website; hence none of the content on this website reflects the views of any of my past or present employers.
